Save some progress.